# week3-ml-baseline-system

./: .gitignore  cars_dis.ipynb  main.py  pyproject.toml
data/processed/: features.csv
reports/: model_card.md
src/ml_baseline/: cli.py  config.py  io.py  sample_data.py  train.py
