[project]
name = "week3-ml-baseline-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "typer>=0.21.0",
]

[project.scripts]
ml-baseline = "ml_baseline.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]